--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
         }
 
         .sub_contents_list li{
-            margin: 10px;
+            margin-top: 5px;
         }
         
         .button {
